--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,15 @@ visibility: hidden;
     color: #393939;
     background-color: #393939; 
 }
+.menu {
+    display: inline;
+}
 .menu li {
-    float: left;
+    display: inline-block;
     padding: 20px 35px;
     color: #d0d0d0;
     font-family: 'OpenSans-Bold';
+    border-right: 1px solid white;
 }
 .nav:after {
     content: "";
@@ -92,7 +96,8 @@ visibility: hidden;
 
 }
 .icons {
-    text-align: right;
+    float: right;
+    display: inline-block;
 }
 
 .ic {
@@ -101,7 +106,7 @@ visibility: hidden;
     height: 12px;
     background: url("../img/sprite.png") no-repeat;
     margin-right: 15px;    
-    vertical-align: center;
+    vertical-align: middle;
     margin-top: 25px;
     text-align: right;
 }
@@ -123,9 +128,6 @@ visibility: hidden;
     color: #5c5c5c;
     text-align: center;
 
-}
-.menu li {
-    border-right: 1px solid white;
 }
 .descr {
     font: 25px  'OpenSans-Light', sans-serif;
